update mathcad
